popularity_assessor/static/css/dark-mode.css
html body .container {
    background-color: #121212 !important;
    color: #ffffff !important;
}

/* General text and background */
body, html {
    background-color: #121212; /* Dark background */
    color: #ffffff; /* Light text */
}

/* Headers, footers, and other sections */
.header, .footer, .section {
    background-color: #262626; /* Slightly lighter dark background */
    color: #ffffff;
}

/* Links */
a, a:hover, a:focus, a:active {
    color: #4d9ef6; /* Light blue for links */
}

/*
.btn {
    background-color: #333333; /* Dark gray buttons
    color: #ffffff;
}
*/
html, body {
    background-color: #121212;
    color: #ffffff;
}

.container {
    background-color: #121212;
    color: #ffffff;
}

.card {
    background-color: #262626;
    color: #ffffff;
}

.card-header {
    background-color: #333333;
    color: #ffffff;
}

.form-control {
    background-color: #333;
    color: #ffffff;
    border: 1px solid #444;
}

.form-control:focus {
    border-color: #555;
    box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.25);
}

.btn-primary {
    background-color: #0d6efd;
    border-color: #0a58ca;
}

a, a:hover, a:focus, a:active {
    color: #0d6efd;
    text-decoration: none;
}
/*
.alert-danger {
    background-color: #441c24;
    color: #ffffff;
}
*/
.navbar {
    background-color: #212529;
    color: #ffffff;
}

#dark-mode-toggle {
    background-color: #212529;
    color: #ffffff;
    border: none;
}

.bg-light, .bg-white, .navbar-light {
    background-color: #121212 !important;
    color: #ffffff !important;
}

.mt-5 {
    background-color: #121212;
}

.custom-card {
    background-color: #000000; /* Dark background for custom cards */
    color: #fff; /* Light text */
}

.border {
    border-color: #555; /* Darker border color */
}

.modal-content {
    background-color: #262626;
    color: #fff;
}

.row {
    background-color: #000000; 
}

p {
    color: #ffffff !important; /* Sets the text color to white */
}

.text-secondary {
    color: #ffffff !important; /* This makes the text color white and uses !important to ensure override */
}

